--- a/public_html/index.html
+++ b/public_html/index.html
@@ -39,6 +39,10 @@
             <header>
                 <h1>Anec + Dote: Styleguide</h1>
             </header>
+            <div id="value">
+                <h2>Our value</h2>
+                <p>Hey there! We are Anec + Dote. We're more than just an archive of literature. Our humble shop reflects life's small moments in the form of using anecdotes. Print is slowly being forgotten after the arrival of electronic forms of reading. With our love for beautiful printed books, we want to share this appreciation with you by curating our collection thoughtfully just for you. </p>
+            </div>
         </div>
     </div>
 </body>
