--- a/public_html/index.html
+++ b/public_html/index.html
@@ -39,7 +39,8 @@
             <header>
                 <h1>Anec + Dote: Styleguide</h1>
             </header>
-        </div>
+            <div id="interactive-elements"></div>
+        </div>      
     </div>
 </body>
 
