--- a/public_html/index.html
+++ b/public_html/index.html
@@ -43,6 +43,415 @@
                 <h2>Our value</h2>
                 <p>Hey there! We are Anec + Dote. We're more than just an archive of literature. Our humble shop reflects life's small moments in the form of using anecdotes. Print is slowly being forgotten after the arrival of electronic forms of reading. With our love for beautiful printed books, we want to share this appreciation with you by curating our collection thoughtfully just for you. </p>
             </div>
+            <div id="interactive-elements">
+                <div class="section-header">
+                    <h2>Interactive Elements</h2>
+                </div>
+                <section class="section-element">
+                    <h2>In-Text Link</h2>
+                    <h3>CSS Selector:</h3>
+                    <p>.in-text-link</p>
+                    <h3>Sample Code:</h3>
+                    <div class="code-container">
+                        <div class="code-space">
+                            <code>&lt;a href="#" class="in-text-link">In-Text Link&lt;/a></code>
+                        </div>
+                    </div>
+                    <h3>Rendered Element:</h3>
+                    <a href="#" class="in-text-link">In-Text Link</a>
+                </section>
+                <section class="section-element">
+                    <h2>Navigation Button</h2>
+                    <h3>CSS Selector:</h3>
+                    <p>nav a</p>
+                    <h3>Sample Code:</h3>
+                    <div class="code-container">
+                        <div class="code-space">
+                            <code>&lt;a href="#">Navigation&lt;/a></code>
+                        </div>
+                    </div>
+                    <h3>Rendered Element:</h3>
+                    <div class="nav-btn">
+                        <a href="#">Navigation</a>
+                    </div>
+                </section>
+                <section class="section-element">
+                    <h2>Submit + Reset Button</h2>
+                    <h3>CSS Selector:</h3>
+                    <p>nav a</p>
+                    <h3>Sample Code:</h3>
+                    <div class="code-container">
+                        <div class="code-space">
+                            <code>&lt;a href="#" class="btn">Submit&lt;/a></code>
+                        </div>
+                    </div>
+                    <h3>Rendered Element:</h3>
+                    <div id="button-element">
+                        <a href="#" class="btn">Submit</a>
+                        <a href="#" class="btn2">Reset</a>
+                    </div>
+                </section>
+                <section class="section-element">
+                    <h2>Label</h2>
+                    <h3>CSS Selector:</h3>
+                    <p>label</p>
+                    <h3>Sample Code:</h3>
+                    <div class="code-container">
+                        <div class="code-space">
+                            <code>&lt;label>Text Field&lt;/label></code>
+                        </div>
+                    </div>
+                    <h3>Rendered Element:</h3>
+                    <div>
+                        <label>Text Field:</label>
+                    </div>
+                    <h2>Text Field</h2>
+                    <h3>CSS Selector:</h3>
+                    <p>input</p>
+                    <h3>Sample Code:</h3>
+                    <div class="code-container">
+                        <div class="code-space">
+                            <code>&lt;input class="input-text-default" type="text" name="name"></code>
+                        </div>
+                    </div>
+                    <h3>Rendered Element:</h3>
+                    <div>
+                        <input class="input-text-default" type="text" name="name">
+                    </div>
+                </section>
+            </div>
+            <div id="text-styling">
+                <div class="section-header">
+                    <h2>Text Styling</h2>
+                </div>
+                <section class="section-element">
+                    <h2>Three Levels of Headings</h2>
+                    <h3>CSS Selector:</h3>
+                    <p>h1</p>
+                    <h3>Sample Code:</h3>
+                    <div class="code-container">
+                        <div class="code-space">
+                            <code>&lt;h1>Header 1&lt;/h1></code>
+                        </div>
+                    </div>
+                    <h3>Rendered Element:</h3>
+                    <h1>Header 1</h1>
+                    <h3>CSS Selector:</h3>
+                    <p>h2</p>
+                    <h3>Sample Code:</h3>
+                    <div class="code-container">
+                        <div class="code-space">
+                            <code>&lt;h2>Header 2&lt;/h2></code>
+                        </div>
+                    </div>
+                    <h3>Rendered Element:</h3>
+                    <h2>Header 2</h2>
+                    <h3>CSS Selector:</h3>
+                    <p>h3</p>
+                    <h3>Sample Code:</h3>
+                    <div class="code-container">
+                        <div class="code-space">
+                            <code>&lt;h3>Header 1&lt;/h3></code>
+                        </div>
+                    </div>
+                    <h3>Rendered Element:</h3>
+                    <h3>Header 3</h3>
+                </section>
+                <section class="section-element">
+                    <h2>Paragraph</h2>
+                    <h3>CSS Selector:</h3>
+                    <p>p</p>
+                    <h3>Sample Code:</h3>
+                    <div class="code-container">
+                        <div class="code-space">
+                            <code>&lt;p>Lorem ipsum dolor sit amet, consectetur adipiscing elit.&lt;/p></code>
+                        </div>
+                    </div>
+                    <h3>Rendered Element:</h3>
+                    <div id="paragraph-style">
+                        <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit.</p>
+                    </div>
+                </section>
+                <section class="section-element">
+                    <h2>Bulleted List</h2>
+                    <h3>CSS Selector:</h3>
+                    <p>ul, ul li</p>
+                    <h3>Sample Code:</h3>
+                    <div class="code-container">
+                        <div class="code-space">
+                            <code>&lt;ul></code>
+                        </div>
+                        <div class="code-space">
+                            <code>&lt;li>item&lt;/li></code>
+                        </div>
+                        <div class="code-space">
+                            <code>&lt;li>item&lt;/li></code>
+                        </div>
+                        <div class="code-space">
+                            <code>&lt;li>item&lt;/li></code>
+                        </div>
+                        <div class="code-space">
+                            <code>&lt;ul></code>
+                        </div>
+                    </div>
+                    <h3>Rendered Element:</h3>
+                    <ul>
+                        <li>item</li>
+                        <li>item</li>
+                        <li>item</li>
+                    </ul>
+                </section>
+                <section class="section-element">
+                    <h2>Numbered List</h2>
+                    <h3>CSS Selector:</h3>
+                    <p>ol, ol li</p>
+                    <h3>Sample Code:</h3>
+                    <div class="code-container">
+                        <div class="code-space">
+                            <code>&lt;ol></code>
+                        </div>
+                        <div class="code-space">
+                            <code>&lt;li>item&lt;/li></code>
+                        </div>
+                        <div class="code-space">
+                            <code>&lt;li>item&lt;/li></code>
+                        </div>
+                        <div class="code-space">
+                            <code>&lt;li>item&lt;/li></code>
+                        </div>
+                        <div class="code-space">
+                            <code>&lt;ol></code>
+                        </div>
+                    </div>
+                    <h3>Rendered Element:</h3>
+                    <ol>
+                        <li>item</li>
+                        <li>item</li>
+                        <li>item</li>
+                    </ol>
+                </section>
+            </div>
+            <div id="combined-elements">
+                <div class="section-header">
+                    <h2>Combined Elements</h2>
+                </div>
+                <section class="section-element">
+                    <h2>Main Navigation</h2>
+                    <h3>CSS Selector:</h3>
+                    <p>nav a</p>
+                    <h3>Sample Code:</h3>
+                    <div class="code-container">
+                        <div class="code-space">
+                            <code>&lt;nav></code>
+                        </div>
+                        <div class="code-space">
+                            <code>&lt;a href="#0"></code>
+                        </div>
+                        <div class="code-space">
+                            <code>&lt;h1>Header&lt;/h1></code>
+                        </div>
+                        <div class="code-space">
+                            <code>&lt;/a></code>
+                        </div>
+                        <div class="code-space">
+                            <code>&lt;h3>Header&lt;/h3></code>
+                        </div>
+                        <div class="code-space">
+                            <code>&lt;a href="#0">Item&lt;/a></code>
+                        </div>
+                        <div class="code-space">
+                            <code>&lt;a href="#0">Item&lt;/a></code>
+                        </div>
+                        <div class="code-space">
+                            <code>&lt;a href="#0">Item&lt;/a></code>
+                        </div>
+                        <div class="code-space">
+                            <code>&lt;h3>Heading&lt;/h3></code>
+                        </div>
+                        <div class="code-space">
+                            <code>&lt;a href="#0">Item&lt;/a></code>
+                        </div>
+                        <div class="code-space">
+                            <code>&lt;/nav></code>
+                        </div>
+                    </div>
+                    <h3>Rendered Element:</h3>
+                    <div id="nav-style">
+                        <nav>
+                            <a href="#0">
+                                <h1>Header</h1>
+                            </a>
+                            <div class="nav-container">
+                                <section class="foundation">
+                                    <h3>Header</h3>
+                                    <a href="#0">Item</a>
+                                    <a href="#0">Item</a>
+                                    <a href="#0">Item</a>
+                                </section>
+                                <section class="ui">
+                                    <h3>Header</h3>
+                                    <a href="#0">Item</a>
+                                </section>
+                            </div>
+                        </nav>
+                    </div>
+                </section>
+                <section class="section-element">
+                    <h2>Product Listing</h2>
+                    <h3>CSS Selector:</h3>
+                    <p>.product-box, .product-name, .product-price</p>
+                    <h3>Sample Code:</h3>
+                    <div class="code-container">
+                        <div class="code-space">
+                            <code>&lt;a href="#0" class="product-box"></code>
+                        </div>
+                        <div class="code-space">
+                            <code> &lt;div class="product-text"></code>
+                        </div>
+                        <div class="code-space">
+                            <code>&lt;div class="product-name"></code>
+                        </div>
+                        <div class="code-space">
+                            <code>&lt;p>Product #23&lt;/p></code>
+                        </div>
+                        <div class="code-space">
+                            <code>&lt;/div></code>
+                        </div>
+                        <div class="code-space">
+                            <code> &lt;div class="product-price"></code>
+                        </div>
+                        <div class="code-space">
+                            <code> &lt;p>Price&lt;/p></code>
+                        </div>
+                        <div class="code-space">
+                            <code>&lt;/div></code>
+                        </div>
+                        <div class="code-space">
+                            <code>&lt;/div></code>
+                        </div>
+                        <div class="code-space">
+                            <code>&lt;/a></code>
+                        </div>
+                    </div>
+                    <h3>Rendered Element:</h3>
+                    <div id="product-element">
+                        <a href="#0" class="product-box">
+                            <div class="product-text">
+                                <div class="product-name">
+                                    <p>Product #23</p>
+                                </div>
+                                <div class="product-price">
+                                    <p>Price</p>
+                                </div>
+                            </div>
+                        </a>
+                    </div>
+                </section>
+                <section class="section-element">
+                    <h2>Grid Structure</h2>
+                    <h3>CSS Selector:</h3>
+                    <p>.grid-container, .grid-col-1of5, .grid-col-2of5, .grid-col-3of5, .grid-col-4of5</p>
+                    <h3>Sample Code:</h3>
+                    <div class="code-container">
+                        <div class="code-space">
+                            <code>&lt;div class="grid-container"></code>
+                        </div>
+                        <div class="code-space">
+                            <code>&lt;div class="grid-col-1of5"></code>
+                        </div>
+                        <div class="code-space">
+                            <code>&lt;/div></code>
+                        </div>
+                        <div class="code-space">
+                            <code>&lt;div class="grid-col-4of5"></code>
+                        </div>
+                        <div class="code-space">
+                            <code>&lt;/div></code>
+                        </div>
+                        <div class="code-space">
+                            <code>&lt;/div></code>
+                        </div>
+                        <div class="code-space">
+                            <code>&lt;div class="grid-container"></code>
+                        </div>
+                        <div class="code-space">
+                            <code>&lt;div class="grid-col-1of5"></code>
+                        </div>
+                        <div class="code-space">
+                            <code>&lt;/div></code>
+                        </div>
+                        <div class="code-space">
+                            <code>&lt;div class="grid-col-4of5"></code>
+                        </div>
+                        <div class="code-space">
+                            <code>&lt;/div></code>
+                        </div>
+                        <div class="code-space">
+                            <code>&lt;/div></code>
+                        </div>
+                    </div>
+                    <h3>Rendered Element:</h3>
+                    <div class="grid-container">
+                        <div class="grid-col-1of5">
+                            <p>20%</p>
+                        </div>
+                        <div class="grid-col-4of5">
+                            <p>80%</p>
+                        </div>
+                    </div>
+                    <div class="grid-container">
+                        <div class="grid-col-3of5">
+                            <p>60%</p>
+                        </div>
+                        <div class="grid-col-2of5">
+                            <p>40%</p>
+                        </div>
+                    </div>
+                </section>
+                <section class="section-element">
+                    <h2>Colour Swatch</h2>
+                    <h3>CSS Selector:</h3>
+                    <p>#yellow-box</p>
+                    <h3>Sample Code:</h3>
+                    <div class="code-container">
+                        <div class="code-space">
+                            <code>&lt;div class="box" id="yellow-box"></code>
+                        </div>
+                        <div class="code-space">
+                            <code>&lt;p>#FFFF66&lt;/p></code>
+                        </div>
+                        <div class="code-space">
+                            <code>&lt;p>Used for add to bag and submit buttons.&lt;/p></code>
+                        </div>
+                        <div class="code-space">
+                            <code>&lt;/div></code>
+                        </div>
+                    </div>
+                    <h3>Rendered Element:</h3>
+                    <div id="palette-wrap">
+                        <div class="box" id="white-box">
+                            <p>#FFFFFF</p>
+                            <p>Used for text on darker backgrounds.</p>
+                        </div>
+                        <div class="box" id="lightyellow-box">
+                            <p>#FFFDE5</p>
+                            <p>Used for background elements.</p>
+                        </div>
+                        <div class="box" id="yellow-box">
+                            <p>#FFFF66</p>
+                            <p>Used for add to bag and submit buttons.</p>
+                        </div>
+                        <div class="box" id="grey-box">
+                            <p>#AAAAAA</p>
+                            <p>Used for in-text links and navigation text.</p>
+                        </div>
+                        <div class="box" id="black-box">
+                            <p>#333333</p>
+                            <p>Used for text on white background.</p>
+                        </div>
+                    </div>
+                </section>
+            </div>
         </div>
     </div>
 </body>
