--- a/public_html/index.html
+++ b/public_html/index.html
@@ -337,12 +337,16 @@
                     <h3>Rendered Element:</h3>
                     <div id="product-element">
                         <a href="#0" class="product-box">
+                            <div class="product-image">
+                                <img src="img/bauhaus9.jpg" alt="Image">
+                            </div>
                             <div class="product-text">
                                 <div class="product-name">
                                     <p>Product #23</p>
                                 </div>
                                 <div class="product-price">
                                     <p>Price</p>
+
                                 </div>
                             </div>
                         </a>
