--- a/public_html/index.html
+++ b/public_html/index.html
@@ -397,19 +397,41 @@
                     </div>
                     <h3>Rendered Element:</h3>
                     <div class="grid-container">
-                        <div class="grid-col-1of5">
-                            <p>20%</p>
-                        </div>
-                        <div class="grid-col-4of5">
-                            <p>80%</p>
+                        <div class="grid-col-12of12">
+                            <p>100%</p>
                         </div>
                     </div>
                     <div class="grid-container">
-                        <div class="grid-col-3of5">
-                            <p>60%</p>
+                        <div class="grid-col-6of12">
+                            <p>50%</p>
                         </div>
-                        <div class="grid-col-2of5">
-                            <p>40%</p>
+                        <div class="grid-col-6of12">
+                            <p>50%</p>
+                        </div>
+                    </div>
+                    <div class="grid-container">
+                        <div class="grid-col-4of12">
+                            <p>33%</p>
+                        </div>
+                        <div class="grid-col-4of12">
+                            <p>33%</p>
+                        </div>
+                        <div class="grid-col-4of12">
+                            <p>33%</p>
+                        </div>
+                    </div>
+                    <div class="grid-container">
+                        <div class="grid-col-3of12">
+                            <p>25%</p>
+                        </div>
+                        <div class="grid-col-3of12">
+                            <p>25%</p>
+                        </div>
+                        <div class="grid-col-3of12">
+                            <p>25%</p>
+                        </div>
+                        <div class="grid-col-3of12">
+                            <p>25%</p>
                         </div>
                     </div>
                 </section>
