--- a/public_html/citations.html
+++ b/public_html/citations.html
@@ -45,6 +45,8 @@
                 <a href="https://stackoverflow.com/questions/12027563/gradual-italics"><p>https://stackoverflow.com/questions/12027563/gradual-italics</p></a>
                 <h2>Navigation Bar Fixed on the Right:</h2>
                 <a href="https://stackoverflow.com/questions/14553995/aligning-floating-my-nav-bar-to-the-right"><p>https://stackoverflow.com/questions/14553995/aligning-floating-my-nav-bar-to-the-right</p></a>
+                <h2>Product Listing Image:</h2>
+                <a href="https://www.instagram.com/p/BdxC0OBHr3-/?taken-by=counterprintbooks"><p>https://www.instagram.com/p/BdxC0OBHr3-/?taken-by=counterprintbooks</p></a>
             </div>
         </div>
     </div>
