Anchor tags on navigation
Links on navigation from citations properly link back to styleguide

--- a/public_html/citations.html
+++ b/public_html/citations.html
@@ -20,13 +20,13 @@
             <div class="nav-container">
                 <section class="foundation">
                     <h3>Foundational Elements</h3>
-                    <a href="#value">Our Value</a>
-                    <a href="#interactive-elements">Interactive Elements</a>
-                    <a href="#text-styling">Text Styling</a>
+                    <a href="index.html">Our Value</a>
+                    <a href="index.html#interactive-elements">Interactive Elements</a>
+                    <a href="index.html#text-styling">Text Styling</a>
                 </section>
                 <section class="ui">
                     <h3>User Interface Elements</h3>
-                    <a href="#combined-elements">Combined Elements</a>
+                    <a href="index.html#combined-elements">Combined Elements</a>
                 </section>
                 <section class="other">
                     <h3>Other</h3>
