Updated code sections
code text

--- a/public_html/index.html
+++ b/public_html/index.html
@@ -252,38 +252,41 @@
                     <p>nav a</p>
                     <h3>Sample Code:</h3>
                     <div class="code-container">
+                         <div class="code-space">
+                            <code>&lt;div id="nav-style"></code>
+                        </div>
                         <div class="code-space">
                             <code>&lt;nav></code>
                         </div>
-                        <div class="code-space">
-                            <code>&lt;a href="#0"></code>
+                         <div class="code-space">
+                            <code>&lt;ul></code>
+                        </div>
+                         <div class="code-space">
+                            <code>&lt;div class="nav-container" id="myNav"></code>
                         </div>
                         <div class="code-space">
-                            <code>&lt;h1>Header&lt;/h1></code>
+                            <code>&lt;li>&lt;a href="#0">Interactive Elements&lt;/a>&lt;/li></code>
                         </div>
                         <div class="code-space">
-                            <code>&lt;/a></code>
+                            <code>&lt;li>&lt;a href="#0">Text Styling&lt;/a>&lt;/li></code>
                         </div>
                         <div class="code-space">
-                            <code>&lt;h3>Header&lt;/h3></code>
+                            <code>&lt;li>&lt;a href="#0">Combined Elements&lt;/a>&lt;/li></code>
                         </div>
                         <div class="code-space">
-                            <code>&lt;a href="#0">Item&lt;/a></code>
+                            <code>&lt;li>&lt;a href="#0">Citations&lt;/a>&lt;/li></code>
                         </div>
-                        <div class="code-space">
-                            <code>&lt;a href="#0">Item&lt;/a></code>
+                         <div class="code-space">
+                            <code>&lt;/ul></code>
                         </div>
-                        <div class="code-space">
-                            <code>&lt;a href="#0">Item&lt;/a></code>
-                        </div>
-                        <div class="code-space">
-                            <code>&lt;h3>Heading&lt;/h3></code>
-                        </div>
-                        <div class="code-space">
-                            <code>&lt;a href="#0">Item&lt;/a></code>
+                         <div class="code-space">
+                            <code>&lt;div></code>
                         </div>
                         <div class="code-space">
                             <code>&lt;/nav></code>
+                        </div>
+                         <div class="code-space">
+                            <code>&lt;div></code>
                         </div>
                     </div>
                     <h3>Rendered Element:</h3>
@@ -318,22 +321,22 @@
                     <h3>Sample Code:</h3>
                     <div class="code-container">
                         <div class="code-space">
-                            <code>&lt;a href="#0" class="product-box"></code>
+                            <code>&lt;ul class="product-list grid-container"></code>
                         </div>
                         <div class="code-space">
-                            <code> &lt;div class="product-text"></code>
+                            <code> &lt;li class="grid-col-4of12" id="list-item"></code>
                         </div>
                         <div class="code-space">
-                            <code>&lt;div class="product-name"></code>
+                            <code>&lt;a href="product1.html"></code>
                         </div>
                         <div class="code-space">
-                            <code>&lt;p>Product #23&lt;/p></code>
+                            <code>&lt;img src="img/product.png" alt="Product"></code>
                         </div>
                         <div class="code-space">
-                            <code>&lt;/div></code>
+                            <code>&lt;/div class="text-content"></code>
                         </div>
                         <div class="code-space">
-                            <code> &lt;div class="product-price"></code>
+                            <code> &lt;h2 Product Name &lt;h2></code>
                         </div>
                         <div class="code-space">
                             <code> &lt;p>Price&lt;/p></code>
@@ -342,10 +345,13 @@
                             <code>&lt;/div></code>
                         </div>
                         <div class="code-space">
-                            <code>&lt;/div></code>
+                            <code>&lt;/a></code>
                         </div>
                         <div class="code-space">
-                            <code>&lt;/a></code>
+                            <code>&lt;/li></code>
+                        </div>
+                        <div class="code-space">
+                            <code>&lt;/ul></code>
                         </div>
                     </div>
                     <h3>Rendered Element:</h3>
